[metadata]
name = sunken
version = 0.0.1
author = Filipe Verri, Douglas Aquino 
author_email = filipeverri@gmail.com, aquinordga@gmail.com 
description = sunken 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = https://github.com/aquinordg/sunken/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    tensorflow
    numpy

[options.packages.find]
where = src
